Implemented to write out basic header data
Class renames:
DataInterface => DataBuffer
DataReader => BinFileIO